# context-kit

./: .gitignore  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  SECURITY.md  mkdocs.yml
.claude-plugin/: marketplace.json
.github/: copilot-instructions.md
.github/workflows/: docs.yml  validate.yml
docs/: .markdownlint-cli2.jsonc  APM.md  ARCHITECTURE.md  GITHUB_COPILOT.md  contributing.md  cookbook.md  getting-started.md  index.md  releasing.md  requirements.txt  security.md  troubleshooting.md
docs/plugins/: code-search.md  context-handoff.md  context-steering.md  index.md  local-rag.md  memory.md  obsidian.md  plan-execute.md  plugin-forge.md  retrieval-core.md  runtime-evidence.md  verify.md
docs/stylesheets/: extra.css
plugins/code-search/: CHANGELOG.md  README.md  apm.yml
plugins/context-handoff/: CHANGELOG.md  README.md  apm.yml
plugins/context-steering/: CHANGELOG.md  LICENSE  README.md  apm.yml
plugins/local-rag/: CHANGELOG.md  README.md  apm.yml  pyproject.toml
plugins/local-rag/.claude-plugin/: plugin.json
plugins/local-rag/hooks/: hooks.json
plugins/local-rag/scripts/: bootstrap.sh
plugins/local-rag/skills/local-rag/: SKILL.md
plugins/local-rag/src/local_rag/: __init__.py  cli.py  embed.py  engine.py  index.py  storage.py  store.py
plugins/local-rag/src/local_rag/loaders/: __init__.py  markdown.py
plugins/local-rag/tests/: test_cli.py  test_embed.py  test_engine.py  test_index.py  test_markdown.py  test_storage.py  test_store.py
workflows/: README.md  plan-big-execute-small.workflow.js
(+124 files in other folders)
