[project]
name = "local-rag"
version = "0.3.0"
description = "Local semantic and hybrid RAG: ollama, turbovec, and SQLite FTS5/BM25."
requires-python = ">=3.10"
dependencies = [
  "turbovec>=0.5",
  "httpx>=0.27",
]

[project.scripts]
local-rag = "local_rag.cli:main"

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.6"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/local_rag"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
